option(
  'maya_version',
  type : 'string',
  value : '2024',
  description : 'The version of Maya to compile for',
  yield : true,
)

option(
  'maya_devkit_base',
  type : 'string',
  description : 'Optional path to the maya devkit',
  yield : true,
)

option(
  'maya_link_qt',
  type : 'boolean',
  description : 'Whether to link to the Qt libraries that maya provides in their devkit/install',
  value: false,
  yield : true,
)
